switch from vercel to netlify build target
- switch from using npm to yarn - netlify needs a different package for esbuild in order to work. Yarn is supporting this by defining supported os architectures.
- move images from posts in public directory for now (need to rethink how to better do this)
- include mdx files into netlify functions so that the files can be read from the filesystem

--- a/app/posts/supported-elements.mdx
+++ b/app/posts/supported-elements.mdx
@@ -4,7 +4,7 @@ date: '2022-01-05'
 description: 'Example of code highlighting and different elements in a blog post.'
 ---
 
-![Code thinking](./code-thinking.png)
+![Code thinking](/img/posts/code-thinking.png)
 
 ## Example of different elements from blog post
 
