--- a/app/posts/supported-elements.mdx
+++ b/app/posts/supported-elements.mdx
@@ -2,11 +2,14 @@
 title: 'Supported elements'
 date: '2022-01-05'
 description: 'Example of code highlighting and different elements in a blog post.'
+tags:
+  - Example
+  - Test tag
 ---
 
 ![Code thinking](/img/posts/code-thinking.png)
 
-## Example of different elements from blog post
+## Example of different elements from a blog post
 
 ### Unordered list
 
